fix: navlink scrollbar styles

--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
 
 .custom-navlinks-scrollable_container {
     max-width: calc(48px * var(--max-custom-navlink-count) + 8px * (var(--max-custom-navlink-count) - 1));
+    -webkit-app-region: no-drag;
 }
 
 .custom-navlinks-scrollable_container div[role="presentation"] > * {
@@ -13,3 +14,7 @@
 .custom-navlinks-scrollable_container div[role="presentation"] > *:not(:last-child) {
                 margin-inline-end: 8px;
             }
+
+.custom-navlink {
+    -webkit-app-region: unset;
+}
